Changes to String Mapping Page

--- a/COAModel/src/deloitte/fin/gl/coa/COAModelBundle.properties
+++ b/COAModel/src/deloitte/fin/gl/coa/COAModelBundle.properties
@@ -16,3 +16,4 @@ deloitte.fin.gl.coa.view.COAFindFieldLOVVO_LABEL=COAFindFieldLOVVO
 deloitte.fin.gl.coa.view.lov.COASegmentLOVVO_LABEL=COASegmentLOVVO
 deloitte.fin.gl.coa.view.lov.COASourceSegmentLOVVO_LABEL=Coa Source Segment Lovvo
 deloitte.fin.gl.coa.view.lov.COATargetSegmentLOVVO_LABEL=Coa Target Segment Lovvo
+deloitte.fin.gl.coa.view.CoaStringValuesVO_LABEL=CoaStringValuesVO
